major fix(ui): fixed the unwanted scrollbar in editable area

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -14,6 +14,12 @@
   }
 }
 
+@layer components {
+  .bn-editor {
+    @apply dark:!bg-slate-800 !bg-stone-50;
+  }
+}
+
 @layer utilities {
   .t {
     @apply transition-all duration-300 ease-in-out;
